CSS fix: Navbar width and Slider visibility fix

--- a/ripples-web/src/scenes/Ripples/styles/Ripples.css
+++ b/ripples-web/src/scenes/Ripples/styles/Ripples.css
@@ -1,12 +1,11 @@
 .leaflet-container {
-  height: calc(100vh - 77px);
+  height: calc(100vh - 85px);
   width: 100%;
 }
 
 .navbar {
-  width: 100%;
+  width: 99%;
   padding-bottom: 0.3em;
-  overflow: hidden;
 }
 
 .navbar-collapse {
